WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307415
[YARR] Fix infinite loop in JIT for non-greedy backreference to zero-width capture
https://bugs.webkit.org/show_bug.cgi?id=307415
Summary
[YARR] Fix infinite loop in JIT for non-greedy backreference to zero-width ca...
Sosuke Suzuki
Reported
2026-02-09 23:29:58 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-02-09 23:30:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58281
EWS
Comment 2
2026-02-10 01:40:15 PST
Committed
307156@main
(437e137889ea): <
https://commits.webkit.org/307156@main
> Reviewed commits have been landed. Closing PR #58281 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-10 01:41:11 PST
<
rdar://problem/170042662
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug